# django-api-tests

./: .gitignore  README.md  pyproject.toml
aluraflix/tests/: test_authentication.py  test_fixtures.py  test_models.py  test_serializers.py
setup/: urls.py
